# rock-paper-scissors-simulator

./: .gitignore  CMakeLists.txt  README.md  client.c  communicationConstants.h  dataUtils.c  dataUtils.h  inputUtils.c  outputUtils.c  outputUtils.h  pipeUtils.c  pipeUtils.h  player.c  player.h  playerUtils.h  server.c  server.h  serverUtils.c  serverUtils.h  tcpUtils.c  tcpUtils.h  utils.c  utils.h
client/: client.c  client.h  gameResultEvaluation.c  gameResultEvaluation.h
server/: dataUtils.c  player.c  player.h  server.c  server.h  utils.c  utils.h
utils/: dataUtils.c  dataUtils.h  utils.c  utils.h
utils/IO/: inputUtils.c  inputUtils.h  outputUtils.h  pipeUtils.c  tcpUtils.c  tcpUtils.h
